# feml

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
scripts/: format.sh
src/: backend.rs  compute_graph.rs  context.rs  data_type.rs  defs.rs  error.rs  feml_impl.rs  layout.rs  lib.rs  memory_manager.rs  object_pool.rs  ops.rs  registry.rs  runtime.rs  shape.rs  storage.rs  tensor.rs
src/backend/: api.rs  backend.rs  backend_trait.rs  mod.rs
src/backend/cpu/: api.rs  compute_graph.rs  compute_plan.rs  cpu_backend.rs  cpu_backend_device.rs  cpu_backend_reg_device.rs  cpu_buffer_backend.rs  cpu_buffer_type.rs  cpu_context.rs  cpu_register.rs  feml_backend_device.rs  function_register.rs  mod.rs  thread_pool.rs  util.rs
src/common/: buf.rs  context.rs  def.rs  mod.rs  tensor.rs  type_traits.rs
src/context/: context.rs  object.rs
src/cpu/: backend.rs  backend_buffers.rs  backend_context.rs  backend_cpu_device_context.rs  backend_device.rs  backend_register.rs  mod.rs
src/cuda/: backend.rs  backend_buffer.rs  backend_buffer_allocator.rs  backend_context.rs  backend_device.rs  backend_register.rs  common.rs  mod.rs
src/cuda/kernels/: common.rs  mod.rs  mul.rs
src/opencl/: backend.rs  backend_buffer.rs  backend_buffer_allocator.rs  backend_context.rs  backend_device.rs  backend_register.rs  mod.rs
src/opencl/kernels/: mul.cl
src/opencl/ops/: mod.rs  mul.rs
src/types/: mod.rs  type_traits.rs  types.rs
src/utils/: log.rs  mod.rs  pad.rs  utils.rs
tests/: cpu_tests.rs  cuda_tests.rs  opencl_tests.rs
tests/cuda/: backend.rs
tests/opencl/: backend.rs
