[package]
name = "feml"
version = "0.1.0"
edition = "2024"

[dependencies]
cudarc = { version = "0.19.4", optional = true }
ocl = { version = "0.19", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["cpu"]
cpu = []
cuda = ["cudarc"]
opencl = ["ocl"]
